<resources>
    <string name="app_name" translatable="false">Rural Caravan</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="greeting_message">Hello, Manas</string>
    <string name="home">Home</string>
    <string name="catalogue">Catalogue</string>
    <string name="balanceSheet">Balance Sheet</string>
    <string name="meetings">Meetings</string>
    <string name="yourOrders">Your Orders</string>
    <string name="govt_schemes">Govt Schemes</string>
    <string name="weather">Weather</string>
    <string name="plans">Plans</string>
    <string name="logOut">Log out</string>
    <string name="language">Language</string>
    <string name="contact">Contact FPO</string>
    <string name="about" translatable="false">About Rural Caravan</string>
    <string name="humidity">Humidity</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="wind">Wind</string>
    <string name="dailyForecast">Daily Forecast</string>
    <string name="hourlyForecast">Hourly Forecast</string>
    <string name="yourCart">Your Cart</string>
    <string name="tagLine">Bridging the gap between farmers and FPO</string>
    <string name="login">LOGIN</string>
    <string name="enterUserName">Enter User Name</string>
    <string name="createAccount">Create\nAccount</string>
    <string name="enterName">Enter name</string>
    <string name="enterPhoneNumber">Enter phone number</string>
    <string name="nextButton">Next</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="village">Village</string>
    <string name="submit">Submit</string>
    <string name="otp_description_text">Enter one time password sent on\n</string>
    <string name="otp_verification_text">Verification</string>
    <string name="verify_code">Verify code</string>
    <string name="otp_verification">OTP\nVerification</string>
    <string name="OTP" translatable="false">OTP</string>
    <string name="verification">Verification</string>
    <string name="base_end_point_ip" translatable="false">http://207.46.228.104:8000/farmer/api/</string>
    <string name="socket_address" translatable="false">http://207.46.228.104:8000</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="quantity">Quantity</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="item_added_to_cart">Item added to cart</string>
    <string name="confirm_order_message">Are you sure you want to order this item?</string>
    <string name="confirm_order">Confirm order</string>
    <string name="amount">Amount</string>
    <string name="payment_mode">Select payment mode</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="pay_with_account">Pay with Account</string>
    <string name="pay_at_FPO_office">Pay at FPO Office</string>
    <string name="pay">PAY</string>
    <string name="cancel">CANCEL</string>
    <string name="order_successful">Order successful</string>
    <string name="delivered">Delivered</string>
    <string name="pending">Pending</string>
    <string name="rate">Rate</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not paid</string>
    <string name="proceed_to_buy">Proceed to Buy</string>
    <string name="delete">Delete</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="new_plans">New Plans</string>
    <string name="subscribed_plans">Subscribed Plans</string>
    <string name="plan_details">Plan Details</string>
    <string name="products_under_plan">Products Under Plan</string>
    <string name="maximum_capacity">Maximum Capacity</string>
    <string name="no_of_subscribers">No. of subscribers</string>
    <string name="guidance">Guidance</string>
    <string name="facilities">Facilities</string>
    <string name="investments">Investments</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="enter_land_area">Enter land area</string>
    <string name="are_you_sure_you_want_to">Are you sure you want to </string>
    <string name="enter_land_area_in_hectare">Enter land area (in hectare)</string>
    <string name="confirmation">Confirmation</string>
    <string name="enter_6_digit_OTP">Enter 6 digit OTP</string>
    <string name="server_error">Server error</string>
    <string name="no_items_found">No items found</string>
    <string name="no_upcoming_meetings">No upcoming meetings</string>
    <string name="no_delivered_orders">No delivered orders</string>
    <string name="no_pending_orders">No pending orders</string>
    <string name="no_items_added_to_cart">No items added to cart</string>
    <string name="no_new_plans">No new plans</string>
    <string name="no_subscribed_plans">No subscribed plans</string>
    <string name="leader_access">Leader Access</string>
    <string name="switch_to_leader_profile">Switch to leader profile</string>
    <string name="add_new_farmer">Add farmer</string>
    <string name="loading">Loading</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="welcome_leader">Welcome Leader</string>
    <string name="smart_phone">Smart Phone</string>
    <string name="feature_phone">Feature Phone</string>
    <string name="no_phone">No Phone</string>
    <string name="select_phone_status">Select phone status</string>
    <string name="farmer_added_successfully">Farmer added successfully</string>
    <string name="total">Total</string>
    <string name="available_balance">Available Balance</string>
    <string name="no_transactions">No transactions</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="accepted">Accepted</string>
    <string name="choose_a_village">Choose a village</string>
    <string name="user_details">User\nDetails</string>
    <string name="no_products_under_plan">No products under plan</string>
    <string name="recommendation">Recommendation</string>
    <string name="plan_stats">Plan Stats</string>
    <string name="acquired">Acquired</string>
    <string name="no_govt_schemes">No government schemes</string>
    <string name="overview">Overview</string>
    <string name="hello">Hello</string>
    <string name="about_the_event">About the event</string>
    <string name="ok">OK</string>
    <string name="select_language">Select language</string>
    <string name="seeds">Seeds</string>
    <string name="fertilisers">Fertilisers</string>
    <string name="pesticides">Pesticides</string>
    <string name="equipments">Equipments</string>
    <string name="others">Others</string>
    <string name="choose_a_district">Choose a district</string>
    <string name="recommend">Recommend</string>
    <string name="fields_can_not_be_empty">Fields can not be empty</string>
    <string name="plan_subscribed_successfully">Plan subscribed successfully</string>
    <string name="plan_un_subscribed_successfully">Plan unsubscribed successfully</string>
    <string name="amount_sold">Amount sold</string>
    <string name="income">Income</string>
    <string name="quality">Quality</string>
    <string name="farmer_produce">Farmer produce</string>
    <string name="produce">Produce</string>
    <string name="rejected">Rejected</string>
    <string name="enter_estimated_investment">Enter estimated investment</string>
    <string name="profit">Profit</string>
    <string name="register_your_land_with_FPO_to_get_recommendation">Register your land with FPO to get recommendation</string>
    <string name="no_farmers_under_the_leader">No farmer under the leader</string>
</resources>