<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">

        <item
            android:id="@+id/catalogue"
            android:icon="@drawable/ic_catalogue"
            android:title="@string/catalogue" />

        <item
            android:id="@+id/eWallet"
            android:icon="@drawable/ic_e_wallet"
            android:title="@string/eWallet" />

        <item
            android:id="@+id/meetings"
            android:icon="@drawable/ic_meetings"
            android:title="@string/meetings" />

        <item
            android:id="@+id/yourOrders"
            android:icon="@drawable/ic_your_orders"
            android:title="@string/yourOrders" />

        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />

        <item
            android:id="@+id/weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/weather" />

        <item
            android:id="@+id/plans"
            android:icon="@drawable/ic_plans"
            android:title="@string/plans" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/signOut" />
        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_language"
            android:title="@string/language" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>