<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/relativeLayoutRecommend">

    <TextView
        android:id="@+id/textViewLandAreaPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/muli_black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_land_area_in_hectare"/>

    <EditText
        android:id="@+id/textViewLandArea"
        android:layout_below="@+id/textViewLandAreaPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewInvestmentPlaceHolder"
        android:layout_below="@+id/textViewLandArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/muli_black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/enter_estimated_investment"/>

    <EditText
        android:id="@+id/textViewInvestment"
        android:layout_below="@+id/textViewInvestmentPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textViewRecommend"
        android:layout_below="@+id/textViewInvestment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/recommend"/>

</RelativeLayout>