<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Fragments.PlanDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewPlanName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello"
            android:textAlignment="center"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/imageViewPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPlanName"
            android:layout_marginTop="10dp"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:id="@+id/linearLayoutMaximumCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewPlan"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/placeHolderMaximumCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maximum_capacity"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMaximumCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="123" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPercentageAcquired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutMaximumCapacity"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/placeHolderPercentageAcquired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acquired_percentage"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPercentageAcquired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="123" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSubscriberCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutPercentageAcquired"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/placeHolderSubscriberCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_subscribers"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSubscriberCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="123" />

        </LinearLayout>

        <TextView
            android:id="@+id/placeHolderGuidance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutSubscriberCount"
            android:paddingTop="10dp"
            android:text="@string/guidance"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGuidance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/placeHolderGuidance"
            android:layout_marginTop="5dp"
            android:text="Trial text for guidance" />

        <TextView
            android:id="@+id/placeHolderFacilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewGuidance"
            android:paddingTop="10dp"
            android:text="@string/facilities"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewFacilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/placeHolderFacilities"
            android:layout_marginTop="5dp"
            android:text="Trial text for facilities" />

        <TextView
            android:id="@+id/placeHolderInvestments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewFacilities"
            android:paddingTop="10dp"
            android:text="@string/investments"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewInvestments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/placeHolderInvestments"
            android:layout_marginTop="5dp"
            android:text="Trial text for investments" />

        <Button
            android:id="@+id/buttonPlanStatus"
            android:layout_below="@+id/textViewInvestments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/subscribe"
            android:textAllCaps="true" />

    </RelativeLayout>

</ScrollView>