<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ListPlansFragment">

    <LinearLayout
        android:id="@+id/linearLayoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textViewNewPlans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/new_plans"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewSubscribedPlans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/subscribed_plans"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_border"
        android:layout_below="@+id/linearLayoutOptions">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchRecommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/textViewRecommendationPlaceHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/recommendation"
            android:textSize="15sp"
            android:fontFamily="@font/muli_semibold"
            android:textColor="@color/black"
            android:layout_toLeftOf="@+id/switchRecommendation"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayoutSwitch"
        android:background="@color/light_grey"/>

    <TextView
        android:id="@+id/textViewNoPlansMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="40sp"
        android:visibility="gone" />

</RelativeLayout>